--- a/client/views/rooms/show.ejs
+++ b/client/views/rooms/show.ejs
@@ -1,5 +1,5 @@
 <% layout('layouts/application') -%>
-Room: <%- roomId %>
+<h1>Welcome to: <%- roomName %></h1>
 
 <canvas id="drawer" width="700" height="500"></canvas>
 
