--- a/client/views/layouts/application.ejs
+++ b/client/views/layouts/application.ejs
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
   <%- body %>
