dyamically create sockets per room

--- a/client/views/layouts/application.ejs
+++ b/client/views/layouts/application.ejs
@@ -6,7 +6,9 @@
   <link rel="stylesheet" href="/assets/styles/main.css">
 </head>
 <body>
-  <%- body %>
+  <div id="main-container">
+    <%- body %>
+  </div>
   <script src="/assets/scripts/main-bundle.js"></script>
 </body>
 </html>
