--- a/client/scripts/apps/player/templates/canvas.ejs
+++ b/client/scripts/apps/player/templates/canvas.ejs
@@ -1,3 +1,3 @@
 <h1>Drawing for: <%- roomName %></h1>
 
-<canvas id="drawer" width="100%" height="90%"></canvas>
+<canvas id="drawer" width="1000" height="900"></canvas>
