Add clear button

--- a/client/scripts/apps/player/templates/canvas.ejs
+++ b/client/scripts/apps/player/templates/canvas.ejs
@@ -1,3 +1,6 @@
 <h3>Drawing for: <%- roomName %></h3>
 
 <canvas id="drawer" width="960" height="540"></canvas>
+
+<button type="button" class="clear-canvas">Start Over</button>
+
